--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/all.min.css">
+<!-- 
+    <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script> -->
+    
+    <title>Clohea</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +46,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+
+    <script src="js/main.js" async></script>
+    <script src="assets/js/main.js" async></script>
+    <script src="assets/js/modal.js" async></script>
+    <script src="assets/js/calender.js" async></script>
   </body>
 </html>
